--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,15 @@ orbs:
 jobs:
   build_test:
     docker:
-      image: fkrull/multi-python:bionic
+      - image: "fkrull/multi-python:bionic"
     steps:
       - checkout
       - run:
           name: Test
           command: tox
   deploy:
+    docker:
+      - image: "fkrull/multi-python:bionic"
     steps:
       - checkout
       - run:
