Fixing bugs in CircleCI configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,8 @@ workflows:
   tag:
     jobs:
       - test:
-          filters: &tags-filter
+          &tags-filter
+          filters:
             branches:
               ignore:
                 - gh-pages
