Updating CircleCI configuration to only run deploy workflow on tags to the master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ workflows:
                 - develop
     jobs:
       - test
-  tag:
+  deploy:
     jobs:
       - test:
           &tag-config
@@ -71,6 +71,8 @@ workflows:
             branches:
               ignore:
                 - gh-pages
+              only:
+                - master
             tags:
               only: /^*.*.*/
       - docs:
