--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: pip install -U pip poetry
+          command: pip3 install -U pip poetry
       - run:
           name: Install Python dependencies
           command: poetry config virtualenvs.create false && poetry install
@@ -33,7 +33,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: pip install -U pip poetry
+          command: pip3 install -U pip poetry
       - run:
           name: Install Python dependencies
           command: poetry config virtualenvs.create false && poetry install
