--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,7 @@ jobs:
       - checkout
       - run:
           name: Install dependencies
-          command: pip3 install -U pip poetry
-      - run:
-          name: Install Python dependencies
-          command: poetry config virtualenvs.create false && poetry install -vvv
+          command: pip3 install -U pip mkdocs
       - run:
           name: Build documentation
           command: cd docs && mkdocs gh-deploy
@@ -34,9 +31,6 @@ jobs:
       - run:
           name: Install dependencies
           command: pip3 install -U pip poetry
-      - run:
-          name: Install Python dependencies
-          command: poetry config virtualenvs.create false && poetry install -vvv
       - run:
           name: Build
           command: poetry build
