--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "gameta"
-version = "0.1.1"
-description = "Tool for managing meta-repositories"
+version = "0.2.0"
+description = "CLI Tool for managing meta-repositories"
 license = "MIT"
 authors = [ "David Lee <ltw_david@hotmail.com>",]
 exclude = [ "tests", ]
