--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = [ "poetry>=0.12",]
+requires = [ "poetry>=0.12", "cryptography==3.3.2"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry]
