--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install dependencies
+          command: pip3 install -U setuptools-rust pip poetry
+      - run:
           name: Test
           command: tox
   docs:
