--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,8 +53,10 @@ setenv =
 python = ">=3.6"
 Click = "^7.1.2"
 colorama = "^0.4.3"
+regex = "^2021.3.17"
 gitpython = "^3.1.9"
 jsonschema = "^3.2.0"
+dataclasses = { version = "^0.8", python = "~3.6" }
 
 [tool.poetry.dev-dependencies]
 mkdocs = "^1.1.2"
